--- a/src/app.css
+++ b/src/app.css
@@ -12,23 +12,49 @@ html, body {
 .t-fade {
     opacity: 0.75;
 }
+.text-success {
+    color: #28a745;
+}
+.text-danger {
+    color: #dc3545;
+}
+.text-warning {
+    color: #ffc107;
+}
 
 .d-flex {
     display: flex;
 }
-
-.data-table {
-    
+.justify-content-center {
+    justify-content: center;
+}
+.justify-content-between {
+    justify-content: space-between;
+}
+.align-items-center {
+    align-items: center;
 }
 
-.data-table > tr > td {
-    padding: 0.5rem;
+.cell-bg-success {
+    background-color: rgba(41, 168, 71, 0.443);
+}
+.cell-bg-danger {
+    background-color: rgba(220, 56, 72, 0.443)
+}
+.cell-bg-warning {
+    background-color: rgba(255, 193, 5, 0.443);
 }
 
-.data-table > tr > td > input {
-    max-width: 7ch;
-}
 
+.text-center {
+    text-align: center;
+}
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
 
 .mt-1 {
     margin-top: .25rem;
@@ -60,4 +86,38 @@ html, body {
 }
 .mb-5 {
     margin-bottom: 1.5rem;
+}
+
+.px-1 {
+    padding-left: .25rem;
+    padding-right: .25rem;
+}
+.px-2 {
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+.px-3 {
+    padding-left: .75rem;
+    padding-right: .75rem;
+}
+.px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.py-1 {
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+}
+.py-2 {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+.py-3 {
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+}
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
