trapezium calcs update

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,7 @@ html, body {
     background-color: rgba(41, 168, 71, 0.25);
 }
 .cell-bg-danger {
-    background-color: rgba(220, 56, 72, 0.25)
+    background-color: rgba(220, 56, 72, 0.25);
 }
 .cell-bg-warning {
     background-color: rgba(255, 193, 5, 0.25);
